# blejoystick-rs

./: Cargo.toml  README.md
mechanical/: Housing.FCStd
src/: ble_descriptors.rs  ble_peripheral.rs  bus.rs  main.rs  prelude.rs  serialization_util.rs  util.rs
