[package]
edition = "2021"
name = "blejoystick-rs"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "blejoystick-rs"
path = "./src/main.rs"

# based on https://github.com/embassy-rs/trouble/blob/main/examples/esp32/Cargo.toml

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

embassy-nrf = { version = "0.11.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }

defmt = { version = "1.0.1" }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# log = { version = "0.4" }

heapless = { version = "0.9", features = ["serde"] }
strum = { version = "0.27", features = ["derive"], default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
ssmarshal = { version = "1.0", default-features = false }                     # for packing BLE wire formats

fixed = { version = "1.30.0", features = ["defmt"] }

embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }

trouble-host = { version = "0.5.1", features = [
    "default-packet-pool-mtu-255",
    "security",
    "defmt",
] }

# for BLE 'security' feature
sequential-storage = { version = "7.1.0", features = ["postcard"] }
embassy-futures = "0.1.1"
rand_core = { version = "0.6", default-features = false }

# for 'ble_bas_peripheral_bonding'
embassy-sync = { version = "0.7" }                 # used by macros
bt-hci = { version = "0.6", features = ["defmt"] }
portable-atomic = "1"
static_cell = "2"

embassy-embedded-hal = "0.5.0"
embassy-time = { version = "0.5.0", features = ["defmt"] }

# peripherals
embedded-hal-nb = "1.0.0"
usbd-hid = "0.9"          # for HID generation

# embedded-io = { version = "0.6.1", features = ["defmt-03"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
usbd-hid = { path = "../usbd-hid" }
