[package]
edition = "2021"
name = "blejoystick-rs"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "blejoystick-rs"
path = "./src/main.rs"

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"

embassy-nrf = { version = "0.7", features = [
    "defmt",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "rt",
    "nrf52840",
] }

# this is pinned to an older version
# https://github.com/embassy-rs/trouble/blob/39c5c993042f37f7361091492502d3a65926f8fe/examples/nrf-sdc/Cargo.toml
# this is the last version using a crates.io version of nrf-sdc, nrf-mpsl
# newer version of embassy build those from versioned git instead of crates.io
# and this PR breaks Windows builds because of use of git symlinks
# # https://github.com/alexmoon/nrf-sdc/issues/84
nrf-sdc = { version = "0.3", default-features = false, features = [
    "defmt",
    "peripheral",
    "nrf52840",
] }
nrf-mpsl = { version = "0.3", default-features = false, features = [
    "defmt",
    "critical-section-impl",
] }

defmt = { version = "1.0.1" }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

heapless = { version = "0.9", features = ["serde"] }
strum = { version = "0.27", features = ["derive"], default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
ssmarshal = { version = "1.0", default-features = false }                     # for packing BLE wire formats

fixed = { version = "1.30.0", features = ["defmt"] }

embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }

trouble-host = { version = "0.5.1", features = ["security", "defmt"] }

# for BLE 'security' feature
sequential-storage = { version = "8.0", features = [
    "postcard",
], default-features = false }
embassy-futures = "0.1.1"
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

# for 'ble_bas_peripheral_bonding'
embassy-sync = { version = "0.7" }
bt-hci = { version = "0.4", features = ["defmt"] }
portable-atomic = "1"
static_cell = "2"

embassy-embedded-hal = "0.6.0"
embassy-time = { version = "0.5", features = ["defmt"] }

# peripherals
embedded-hal-nb = "1.0.0"
usbd-hid = "0.9"

# embedded-io = { version = "0.6.1", features = ["defmt-03"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
usbd-hid = { path = "../usbd-hid" }
